--- a/rainbow_dqn_pytorch/hyperparameters.yml
+++ b/rainbow_dqn_pytorch/hyperparameters.yml
@@ -2,14 +2,16 @@ cartpole1:
   env_id: CartPole-v1
   replay_memory_size: 100000
   mini_batch_size: 32
-  epsilon_init: 1
-  epsilon_decay: 0.9995
-  epsilon_min: 0.05
+  epsilon_init: 0
+  epsilon_decay: 0
+  epsilon_min: 0
   network_sync_rate: 10
   learning_rate_a: 0.001
   discount_factor_g: 0.99
   stop_on_reward: 100000
   fc1_nodes: 10
+  alpha: 0.1
+  beta: 0.4
 
 flappybird1:
   env_id: FlappyBird-v0
