--- a/rainbow_dqn_pytorch/hyperparameters.yml
+++ b/rainbow_dqn_pytorch/hyperparameters.yml
@@ -1,7 +1,7 @@
 cartpole1:
   env_id: CartPole-v1
   replay_memory_size: 10000
-  mini_batch_size: 256
+  mini_batch_size: 128
   epsilon_init: 0
   epsilon_decay: 0
   epsilon_min: 0
@@ -20,15 +20,21 @@ cartpole1:
 flappybird1:
   env_id: FlappyBird-v0
   replay_memory_size: 100000
-  mini_batch_size: 32
-  epsilon_init: 1
-  epsilon_decay: 0.99_99_5
-  epsilon_min: 0.05
-  network_sync_rate: 10
+  mini_batch_size: 256
+  epsilon_init: 0
+  epsilon_decay: 0
+  epsilon_min: 0
+  network_sync_rate: 100
   learning_rate_a: 0.0001
-  discount_factor_g: 0.99
-  stop_on_reward: 100000
+  discount_factor_g: 0.97
+  stop_on_reward: 1000
   fc1_nodes: 512
+  alpha: 0.5
+  beta: 0.4
+  v_min: -5
+  v_max: 5
+  atom_size: 51
+  n_step: 2
   env_make_params:
     use_lidar: False
 
